--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "coffee-warehouse",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://telerik.github.io/react-coffee-warehouse",
   "dependencies": {
     "@progress/kendo-data-query": "^1.5.4",
     "@progress/kendo-date-math": "^1.5.1",
@@ -29,6 +28,7 @@
     "@progress/kendo-react-treeview": "^4.5.0",
     "@progress/kendo-react-upload": "^4.5.0",
     "@progress/kendo-theme-default": "^4.36.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -40,9 +40,13 @@
     "node-sass": "^4.13.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -68,6 +72,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^2.2.0",
+    "react-error-overlay": "^6.0.9"
   }
 }
